[gd_scene load_steps=19 format=3 uid="uid://o4kyh4s6tvex"]

[ext_resource type="Script" uid="uid://uoxlnqrf7tu0" path="res://spirits/evil_spirit/evil_spirit.gd" id="1_8nhym"]
[ext_resource type="PackedScene" uid="uid://crx7kk4gj06gp" path="res://misc/hurt_box/hurt_box.tscn" id="2_4vt4j"]
[ext_resource type="Shader" uid="uid://c1cwfwmljsk7s" path="res://assets/effects/shaders/hit.gdshader" id="2_gcd8g"]
[ext_resource type="Texture2D" uid="uid://qirj7fbifae3" path="res://assets/characters/evil_spirit.png" id="2_ttybi"]
[ext_resource type="PackedScene" uid="uid://cwqpu3qi771of" path="res://spirits/soft_collider/soft_collider.tscn" id="2_wxait"]
[ext_resource type="PackedScene" uid="uid://b8a0hl563fulo" path="res://misc/hit_box/hit_box.tscn" id="3_spcom"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m12fc"]
resource_local_to_scene = true
shader = ExtResource("2_gcd8g")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8nhym"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gcd8g"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_wxait"]
resource_local_to_scene = true
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ttybi"]
radius = 7.0

[sub_resource type="Animation" id="Animation_ttybi"]
resource_name = "hit"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.881937, 0.881937, 0.881937, 1), Color(0.870588, 0.807843, 0.705882, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gcd8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.75, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:material:shader_parameter/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m12fc"]
resource_name = "death"
length = 0.35
step = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_m2v0n"]
resource_name = "flip_left"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.4, 1), Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_sanwp"]
resource_name = "flip_right"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(-0.4, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gcd8g"]
_data = {
&"RESET": SubResource("Animation_gcd8g"),
&"death": SubResource("Animation_m12fc"),
&"flip_left": SubResource("Animation_m2v0n"),
&"flip_right": SubResource("Animation_sanwp"),
&"hit": SubResource("Animation_ttybi")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gcd8g"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 24.45
initial_velocity_max = 48.9
angular_velocity_min = 332.61
angular_velocity_max = 332.61
gravity = Vector3(0, 2, 0)

[node name="EvilSpirit" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_8nhym")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_m12fc")
scale = Vector2(0.75, 1)
texture = ExtResource("2_ttybi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_8nhym")

[node name="HurtBox" parent="." instance=ExtResource("2_4vt4j")]
visible = false
ignored_groups = Array[StringName]([&"evil_spirits"])

[node name="CollisionShape" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_gcd8g")

[node name="SoftCollider" parent="." instance=ExtResource("2_wxait")]
visible = false

[node name="CollisionShape" parent="SoftCollider" index="0"]
shape = SubResource("CircleShape2D_wxait")

[node name="HitBox" parent="." groups=["evil_spirits"] instance=ExtResource("3_spcom")]
visible = false
max_health = 2

[node name="CollisionShape" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_ttybi")

[node name="ImmunityTime" parent="HitBox" index="1"]
wait_time = 0.001

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gcd8g")
}

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
amount_ratio = 0.3
lifetime = 0.3
explosiveness = 1.0
collision_base_size = 0.0
process_material = SubResource("ParticleProcessMaterial_gcd8g")

[connection signal="dealt_damage" from="HurtBox" to="." method="_on_hurt_box_dealt_damage"]
[connection signal="damage_taken" from="HitBox" to="." method="_on_hit_box_damage_taken"]
[connection signal="died" from="HitBox" to="." method="_on_hit_box_died"]

[editable path="HurtBox"]
[editable path="SoftCollider"]
[editable path="HitBox"]
